Removed highlight box

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3152,8 +3152,7 @@ input, select, textarea {
 		width: 50px;
 	}
 
-	.transbox{
-		/* margin: 80px; */
+	/* .transbox{
 		background-color: black;
 		opacity: 0.60;
-	}
+	} */
