--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3153,7 +3153,8 @@ input, select, textarea {
 	}
 
 	/* .transbox{
-		max-width: 50%;
+		margin: auto;
+		max-width: 40%;
 		background-color: black;
 		opacity: 0.60;
 	} */
